# moive-report

./: .gitignore  .travis.yml  Cargo.toml  VideoCollection.csv  example.csv
src/: main.rs  style.css  ui.qml
