[package]
name = "movie-report"
version = "0.2.0"
authors = ["zethra <benaagoldberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.1"
csv = { version = "1.1", default-features = false }
horrorshow = "0.7"
serde_derive = "1.0"
serde = "1.0"
cstr = "0.1"
anyhow = "1.0"